Realizzata struttura base footer

--- a/src/partials/_home.scss
+++ b/src/partials/_home.scss
@@ -62,15 +62,15 @@ main#home{
             //     @include lable-pad(30px, 20px);
             // }
 
-            &.bg-purple{
-                background-color: #3c1567;
-            }
-            &.bg-grey{
-                background-color: #3c3c3c;
-            }
-            &.bg-blue{
-                background-color: #0072bc;
-            }
+            // &.bg-purple{
+            //     background-color: #3c1567;
+            // }
+            // &.bg-grey{
+            //     background-color: #3c3c3c;
+            // }
+            // &.bg-blue{
+            //     background-color: #0072bc;
+            // }
 
             &#drake, &#mushroom, &#office{
                 background-position: center;
