--- a/src/partials/_home.scss
+++ b/src/partials/_home.scss
@@ -27,21 +27,23 @@ main#home{
             flex-basis: calc((100% / 3) - 20px);
             overflow-x: hidden;
             margin: 0 10px;
+            background-color: white;
+            
             img{
                 width: 100%;
                 vertical-align: middle;
             }
-            
             .text{
-                background-color: white;
                 h3{
-                    font-weight: normal;
+                    font-weight: 600;
                 }
                 p{
                     margin: 20px 0;
+                    font-size: 15px;
                 }
                 a{
                     color: $link-blue;
+                    
                 }
                 @include lable-pad(20px, 30px);
             }
