--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@
 }
 body{
     background-color: #e8e8e8;
+    font-family: 'Montserrat', sans-serif;
 }
 ul{
     list-style-type: none;
@@ -31,9 +32,9 @@ a{
 // Proprietà header
 header{
     background-color: $primary-dark;
-    height: 120px;
+    height: 100px;
     color: white;
-    padding: 20px 0;
+    padding: 10px 0 20px;
     @include centered;
 
     ul{
@@ -46,6 +47,19 @@ header{
             justify-content: flex-end;
             align-items: center;
             height: 30px;
+            li{
+                margin-left: 20px;
+                font-size: 13px;
+                a{
+                    color: #989898;
+                }
+                i{
+                    font-size: 18px;
+                    vertical-align: middle;
+                    color: #009cff;
+                    margin-right: 5px;
+                }
+            }
         }
     }
 
@@ -54,9 +68,16 @@ header{
             height: 50px;
             display: flex;
             align-items: center;
-        }
-        .logo{
-            background-color: red;
+            li{
+                margin-right: 30px;
+                font-size: 15px;
+                a{
+                    color: white;
+                }
+                i{
+                    color: grey;
+                }
+            }
         }
     }
 }
@@ -76,9 +97,15 @@ footer{
             li{
                 font-size: 14px;
                 color: #4d4d4d;
+                margin: 12px 0;
+
                 h3{
                     color: black;
-                    font-size: 18px;
+                    font-weight: 500;
+                }
+                a{
+                    color: #4d4d4d;
+                    font-size: 13px;
                 }
             }
         }
@@ -86,7 +113,11 @@ footer{
             margin-top: 20px;
             li {
                 display: inline-block;
-                font-size: 35px;
+                
+                .fab, .fas{
+                    font-size: 35px;
+                    margin-right: 5px;
+                }
                 .fa-instagram-square{
                     color: #e4405f;
                 }
