--- a/src/style.scss
+++ b/src/style.scss
@@ -36,6 +36,7 @@ header{
     color: white;
     padding: 10px 0 20px;
     @include centered;
+    overflow: hidden;
 
     ul{
         display: inline-block;
@@ -148,13 +149,22 @@ footer{
         justify-content: space-between;
 
         img{
-            margin: 0 10px;
+            margin: 0 15px;
             vertical-align: middle;
         }
         
-        ul{
-            li{
-                display: inline-block;
+        .terms{
+            margin-top: 15px;
+            ul{
+                li{
+                    display: inline-block;
+                    font-size: 12px;
+                    color: white;
+                    margin: 0 15px;
+                    a{
+                        color: #999999;
+                    }
+                }
             }
         }
     }
